[project]
name = "nizniy-maps"
dynamic = ["version"]
description = "Hackaton test"
readme = "README.md"
authors = [
    { name = "Andrew Podvigin", email = "podviginandrej@gmail.com" },
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "altair==5.5.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "branca==0.8.2",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "filelock==3.20.0",
    "folium==0.20.0",
    "fsspec==2025.9.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "hatch>=1.15.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "narwhals==2.9.0",
    "networkx==3.5",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "protobuf==6.33.0",
    "pyarrow==22.0.0",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.10.23",
    "requests==2.32.5",
    "rpds-py==0.28.0",
    "ruff>=0.14.2",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.50.0",
    "streamlit-folium==0.25.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "torch==2.9.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "xyzservices==2025.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src"]

[tool.hatch.version]
path = "src/__version__.py"

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportUnknownMemberType = false
exclude = ["**/__pycache__", "**/.*"]

[tool.ruff]
exclude = [".ruff_cache", ".venv", "venv", "build"]
line-length = 120
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.mypy]
exclude = [".*/__pycache__/.*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false
